# macroquad_tiled_clone

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  release_candidate.patch  ticket_diff.txt
.github/workflows/: ci.yml
assets/: map.json  tileset.json
assets2/: coin.json  map.json  objects_map.json  tileset.json  tileset2.json
docs/: design.md
examples/: basic_map.rs  objects.rs
src/: command.rs  error.rs  geom.rs  ir_map.rs  layer.rs  lib.rs  map.rs  tiled.rs  view.rs
src/error/: error.rs  mod.rs
src/loader/: json_loader.rs  mod.rs
src/raw/: raw.rs
src/render/: cull.rs  mod.rs
src/spatial/: index.rs  mod.rs
src2/: layer.rs  lib.rs  tiled.rs  tileset.rs
tests/: integration_example.rs  load_tests.rs  map_tests.rs  stamp_overflow.rs
tests/fixtures/: basic_tileset.json  external_props_map.json  minimal_finite_map.json  multichunk_objects_map.json  props_tileset.json
