[package]
name = "macroquad_tiled_clone"
version = "0.1.0"
edition = "2021"
authors = ["B3Z0 <vlad.cotiga75@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Tiled JSON renderer and spatial index for macroquad"
repository = "https://github.com/B3Z0/macroquad_tiled_clone"
readme = "README.md"
keywords = ["macroquad", "tiled", "tilemap", "game", "rpg"]
categories = ["game-development"]

[dependencies]
macroquad = "0.4"               # for rendering & textures
serde_json = "1.0.142"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
anyhow = "1.0"                 # for quick prototyping of errors in examples/tests
